2003-07-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved Astro::Catalog::BaseQuery to be Astro::Catalog::Query in
          preparation for it be a 'proprt' polymorphic factory class for
          generic catalogue queries.
        
        * Moved actualy query sub-classes down a directory level to allow
          for the Query.pm file  
          
2003-07-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved the catalogue query classes to chare a common namespace,
          current classes now inherit from the Astro::Catalog::Transport::REST
          class. While future web and GRID service classes will inherit from
          related classes. All the Astro::Catalog::Transport classes inherit
          from Tim's BaseQuery class.
          
        * Moved REST specific setup from BaseQuery to Transport::REST class  

        * t/*.t: Test scripts modified to work within new framework.
        
        * t/1_compile.t: Now chekc for presence of Astro::Aladin module
        
2003-07-27  Tim Jenness <timj@jach.hawaii.edu>

        * Added sorting and filtering of catalogues.

2003-07-26  Tim Jenness <timj@jach.hawaii.edu> 
            & Alasdiar Allan <aa@astro.ex.ac.uk>
            
        * Added pluggable IO.
            
2003-07-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * t/catalog.t: Tests fixed to reflect the new two decimal place
          precisions generated by using Astro::Coords objects
          
2003-07-24  Tim Jenness <timj@jach.hawaii.edu>

	* BaseQuery/BaseQuery.pm: Write base class for catalog query classes.

	* Catalog.pm (_read_cluster): No longer use ra() and dec() methods
	to set the ra and dec (store the Astro::Coords object directly)

	* Star/Star.pm: ra($ra) and dec($dec) methods now deprecated.

        * t/1_compile.t: New tests addded.
        
2003-07-23  Tim Jenness <timj@jach.hawaii.edu>

	* Star/Star.pm: Now uses Astro::Coords internally.

	* Catalog.pm: Now uses Astro::Coords internally. Switch to lexical